@@ -1,3 +1,11 @@
+Fri Sep 14 09:34:47 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/oemm/RawStorage.java: Fix OEMM.Node.minIndex and
+	OEMM.Node.maxIndex, previous values were bogus.
+	They are now non-negative and OEMM.Node.maxIndex > OEMM.Node.minIndex.
+	* src/org/jcae/mesh/oemm/OEMM.java: Modify OEMM.Node.serialVersionUID
+	to forbid use of wrongly computed minIndex and maxIndex values.
+
 Thu Sep 13 18:21:50 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/oemm/OEMM.java (search): Throw
